test/iteType2.slq

def x[cond:ğ”¹,t1:*,t2:*](arg:if cond { t1 } else { t2 })â‡’measure(arg); // error
